--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-motion": "^1.1.1",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-google-oauth2": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
