--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss-motion": "^1.1.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
+    "vue3-google-login": "^2.0.34",
     "vue3-google-oauth2": "^1.0.7"
   },
   "devDependencies": {
