--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.7",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/vue-fontawesome": "^3.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "jwt-decode": "^4.0.0",
     "tailwindcss": "^4.1.11",
     "tailwindcss-motion": "^1.1.1",
     "vue": "^3.5.17",
